Set ONEAGENT_ENABLE_VOLUME_STORAGE by default for GKE

--- a/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/configmap.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/configmap.yaml
@@ -147,3 +147,6 @@ data:
         operator: Exists
       args:
       - APP_LOG_CONTENT_ACCESS=1
+      env:
+      - name: ONEAGENT_ENABLE_VOLUME_STORAGE
+        value: "true"
