--- a/dynatrace-oneagent-operator/templates/Common/customresource.yaml
+++ b/dynatrace-oneagent-operator/templates/Common/customresource.yaml
@@ -21,6 +21,7 @@ spec:
   apiUrl: {{ required "ApiUrl needs to be set!" .Values.oneagent.apiUrl}}
   tokens: {{ .Values.secret.name }}
   skipCertCheck: false
+  image: {{ .Values.oneagent.image }}
   tolerations:
   - effect: NoSchedule
     key: node-role.kubernetes.io/master
