Recreate release 0.6.0 with customizable oneagent image

--- a/dynatrace-oneagent-operator/templates/Common/customresource.yaml
+++ b/dynatrace-oneagent-operator/templates/Common/customresource.yaml
@@ -21,7 +21,7 @@ spec:
   apiUrl: {{ required "ApiUrl needs to be set!" .Values.oneagent.apiUrl}}
   tokens: {{ .Values.secret.name }}
   skipCertCheck: false
-  image: {{ .Values.oneagent.image }}
+  image: {{ include "dynatrace-oneagent.image" . }}
   tolerations:
   - effect: NoSchedule
     key: node-role.kubernetes.io/master
