--- a/dynatrace-oneagent-operator/templates/Common/customresource.yaml
+++ b/dynatrace-oneagent-operator/templates/Common/customresource.yaml
@@ -12,6 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-oneagent-operator.platformSet" .))}}
 apiVersion: dynatrace.com/v1alpha1
 kind: OneAgent
 metadata:
