--- a/dynatrace-oneagent-operator-google-marketplace/Chart.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/Chart.yaml
@@ -15,6 +15,16 @@
 apiVersion: v1
 name: dynatrace-oneagent-operator
 description: The Dynatrace OneAgent Operator Helm chart for Google Kubernetes Engine
+home: https://www.dynatrace.com/
 type: application
 version: 0.5
 appVersion: 0.5
+maintainers:
+  - name: DTMad
+    email: marco.mader@dynatrace.com
+  - name: lrgar
+    email: luis.garcia@dynatrace.com
+  - name: mmayr-at
+    email: michael.mayr@dynatrace.com
+sources:
+  - https://github.com/Dynatrace/helm-charts
