--- a/dynatrace-oneagent-operator/values.yaml
+++ b/dynatrace-oneagent-operator/values.yaml
@@ -12,17 +12,17 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-platform: ""
+platform: "kubernetes"
 
 operator:
-  image:
-    
+  image: ""
+
 oneagent:
   name: "oneagent"
-  apiUrl:
-  image:
+  apiUrl: ""
+  image: ""
 
 secret:
   name: "oneagent"
-  apiToken:
-  paasToken:
+  apiToken: ""
+  paasToken: ""
