--- a/dynatrace-oneagent-operator/templates/Common/customresource.yaml
+++ b/dynatrace-oneagent-operator/templates/Common/customresource.yaml
@@ -19,13 +19,67 @@ metadata:
   name: {{ .Values.oneagent.name }}
   namespace: {{ .Release.Namespace }}
 spec:
-  apiUrl: {{ required "ApiUrl needs to be set!" .Values.oneagent.apiUrl}}
-  tokens: {{ .Values.secret.name }}
-  skipCertCheck: false
+  apiUrl: {{ required "ApiUrl needs to be set!" .Values.oneagent.apiUrl }}
+  tokens: {{ .Values.oneagent.name }}
   image: {{ include "dynatrace-oneagent.image" . }}
-  tolerations:
-  - effect: NoSchedule
-    key: node-role.kubernetes.io/master
-    operator: Exists
-  args:
-  - APP_LOG_CONTENT_ACCESS=1
+
+  {{- if .Values.oneagent.args }}
+  args: {{- toYaml .Values.oneagent.args | nindent 4 }}
+  {{- end }}
+
+  {{- if .Values.oneagent.env }}
+  env: {{- toYaml .Values.oneagent.env | nindent 4 }}
+  {{- end }}
+
+  {{- if .Values.oneagent.labels }}
+  labels: {{- toYaml .Values.oneagent.labels  | nindent 4 }}
+  {{- end }}
+
+  {{- if .Values.oneagent.nodeSelector }}
+  nodeSelector: {{- toYaml .Values.oneagent.nodeSelector | nindent 4 }}
+  {{- end }}
+
+  {{- if .Values.oneagent.proxy }}
+  proxy:
+    valueFrom: {{ .Values.oneagent.name }}
+  {{- end }}
+
+  {{- if .Values.oneagent.tolerations }}
+  tolerations: {{- toYaml .Values.oneagent.tolerations | nindent 4 }}
+  {{- end }}
+
+  {{- if .Values.oneagent.resources }}
+  resources: {{- toYaml .Values.oneagent.resources | nindent 4 }}
+  {{- end }}
+
+  {{- if .Values.oneagent.dnsPolicy }}
+  dnsPolicy: {{ .Values.oneagent.dnsPolicy }}
+  {{- end }}
+
+  {{- if .Values.oneagent.enableIstio }}
+  enableIstio: {{ .Values.oneagent.enableIstio }}
+  {{- end }}
+
+  {{- if .Values.oneagent.disableAgentUpdate }}
+  disableAgentUpdate: {{ .Values.oneagent.disableAgentUpdate }}
+  {{- end }}
+
+  {{- if .Values.oneagent.skipCertCheck }}
+  skipCertCheck: {{ .Values.oneagent.skipCertCheck }}
+  {{- end }}
+
+  {{- if .Values.oneagent.waitReadySeconds }}
+  waitReadySeconds: {{ .Values.oneagent.waitReadySeconds }}
+  {{- end }}
+
+  {{- if .Values.oneagent.priorityClassName }}
+  priorityClassName: {{ .Values.oneagent.priorityClassName }}
+  {{- end }}
+
+  {{- if .Values.oneagent.serviceAccountName }}
+  serviceAccountName: {{ .Values.oneagent.serviceAccountName }}
+  {{- end }}
+
+  {{- if .Values.oneagent.trustedCAs }}
+  trustedCAs: {{ .Values.oneagent.name }}
+  {{- end }}
