--- a/dynatrace-oneagent-operator/templates/Common/secret.yaml
+++ b/dynatrace-oneagent-operator/templates/Common/secret.yaml
@@ -16,9 +16,12 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.secret.name }}
+  name: {{ .Values.oneagent.name }}
   namespace: {{ .Release.Namespace }}
 data:
   apiToken: {{ .Values.secret.apiToken | b64enc }}
   paasToken: {{ .Values.secret.paasToken | b64enc }}
+  {{- if .Values.oneagent.proxy }}
+  proxy: {{ .Values.oneagent.proxy | b64enc }}
+  {{- end }}
 type: Opaque
