--- a/dynatrace-oneagent-operator/templates/Kubernetes/role-operator.yaml
+++ b/dynatrace-oneagent-operator/templates/Kubernetes/role-operator.yaml
@@ -43,6 +43,21 @@ rules:
       - update
       - delete
   - apiGroups:
+      - apps
+    resources:
+      - replicasets
+      - deployments
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - apps
+    resources:
+      - deployments/finalizers
+    verbs:
+      - update
+  - apiGroups:
       - "" # "" indicates the core API group
     resources:
       - configmaps
@@ -56,7 +71,6 @@ rules:
   - apiGroups:
       - "" # "" indicates the core API group
     resources:
-      - configmaps
       - pods
     verbs:
       - get
