--- a/dynatrace-oneagent-operator/templates/Openshift/role-operator.yaml
+++ b/dynatrace-oneagent-operator/templates/Openshift/role-operator.yaml
@@ -63,6 +63,21 @@ rules:
       - watch
       - delete
   - apiGroups:
+      - apps
+    resources:
+      - replicasets
+      - deployments
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - apps
+    resources:
+      - deployments/finalizers
+    verbs:
+      - update
+  - apiGroups:
       - "" # "" indicates the core API group
     resources:
       - secrets
