--- a/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/secret.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/secret.yaml
@@ -15,11 +15,14 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.secret.name }}
+  name: {{ .Values.oneagent.name }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "dynatrace-oneagent-operator.commonlabels" . | nindent 4 }}
 data:
   apiToken: {{ .Values.secret.apiToken | b64enc }}
   paasToken: {{ .Values.secret.paasToken | b64enc }}
+  {{- if .Values.oneagent.proxy }}
+  proxy: {{ .Values.oneagent.proxy | b64enc }}
+  {{- end }}
 type: Opaque
