--- a/dynatrace-oneagent-operator/values.yaml
+++ b/dynatrace-oneagent-operator/values.yaml
@@ -21,16 +21,22 @@ oneagent:
   name: "oneagent"
   apiUrl: ""
   image: ""
-  args:
-    - --set-app-log-content-access=true
-  env: []
-  nodeSelector: {}
-  labels: {}
+  # The expected format is YAML and not a string
+  args: ""
+  # The expected format is YAML and not a string
+  env: ""
+  # The expected format is YAML and not a string
+  nodeSelector: ""
+  # The expected format is YAML and not a string
+  labels: ""
   skipCertCheck: false
   disableAgentUpdate: false
   enableIstio: false
   dnsPolicy: ""
-  resources: {}
+  # The expected format is YAML and not a string
+  resources: ""
+  # The expected format is YAML and not a string
+  tolerations: ""
   waitReadySeconds: null
   priorityClassName: ""
   serviceAccountName: ""
