--- a/dynatrace-oneagent-operator/templates/Kubernetes/podsecuritypolicy-operator.yaml
+++ b/dynatrace-oneagent-operator/templates/Kubernetes/podsecuritypolicy-operator.yaml
@@ -17,7 +17,7 @@
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
-  name: {{ .Release.Name }}
+  name: dynatrace-oneagent-operator
   annotations:
     seccomp.security.alpha.kubernetes.io/allowedProfileNames: "docker/default"
     apparmor.security.beta.kubernetes.io/allowedProfileNames: "runtime/default"
