--- a/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/configmap.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/configmap.yaml
@@ -24,7 +24,7 @@ data:
     apiVersion: policy/v1beta1
     kind: PodSecurityPolicy
     metadata:
-      name: {{ .Release.Name }}
+      name: dynatrace-oneagent-operator
       annotations:
         seccomp.security.alpha.kubernetes.io/allowedProfileNames: "docker/default"
         apparmor.security.beta.kubernetes.io/allowedProfileNames: "runtime/default"
