--- a/dynatrace-oneagent-operator/templates/Openshift/role-operator.yaml
+++ b/dynatrace-oneagent-operator/templates/Openshift/role-operator.yaml
@@ -14,7 +14,7 @@
 
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-oneagent-operator.platformSet" .))}}
 {{- if eq .Values.platform "openshift" }}
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: {{ .Release.Name }}
