Adjust manifest for dynatrace-oneagent-operator

--- a/dynatrace-oneagent-operator/templates/Common/customresource-oneagent.yaml
+++ b/dynatrace-oneagent-operator/templates/Common/customresource-oneagent.yaml
@@ -91,3 +91,7 @@ spec:
   {{- if .Values.oneagent.trustedCAs }}
   trustedCAs: {{ .Values.oneagent.name }}
   {{- end }}
+
+  {{- if .Values.oneagent.networkZone }}
+  networkZone: {{ .Values.oneagent.networkZone }}
+  {{- end }}
