--- a/dynatrace-oneagent-operator/values.yaml
+++ b/dynatrace-oneagent-operator/values.yaml
@@ -42,6 +42,16 @@ oneagent:
   serviceAccountName: ""
   proxy: ""
   trustedCAs: ""
+  networkZone: ""
+
+oneagentapm:
+  name: "oneagentapm"
+  apiUrl: ""
+  skipCertCheck: false
+  enableIstio: false
+  proxy:
+  trustedCAs: ""
+  networkZone: ""
 
 secret:
   autoCreate: true
