--- a/dynatrace-oneagent-operator/templates/Common/customresource-oneagent.yaml
+++ b/dynatrace-oneagent-operator/templates/Common/customresource-oneagent.yaml
@@ -13,6 +13,7 @@
 # limitations under the License.
 
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-oneagent-operator.platformSet" .))}}
+{{- if eq .Values.mode "fullstack" }}
 apiVersion: dynatrace.com/v1alpha1
 kind: OneAgent
 metadata:
@@ -95,3 +96,4 @@ spec:
   {{- if .Values.oneagent.networkZone }}
   networkZone: {{ .Values.oneagent.networkZone }}
   {{- end }}
+{{ end }}
