--- a/dynatrace-oneagent-operator/templates/Common/customresource-oneagentapm.yaml
+++ b/dynatrace-oneagent-operator/templates/Common/customresource-oneagentapm.yaml
@@ -13,6 +13,7 @@
 # limitations under the License.
 
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-oneagent-operator.platformSet" .))}}
+{{- if eq .Values.mode "apm" }}
 apiVersion: dynatrace.com/v1alpha1
 kind: OneAgentAPM
 metadata:
@@ -42,3 +43,4 @@ spec:
   {{- if .Values.oneagentapm.networkZone }}
   networkZone: {{ .Values.oneagentapm.networkZone }}
   {{- end }}
+{{ end }}
