--- a/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/application.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/application.yaml
@@ -71,3 +71,7 @@ spec:
       kind: Secret
     - group: batch/v1
       kind: Job
+    - group: admissionregistration.k8s.io/v1beta1
+      kind: MutatingWebhookConfiguration
+    - group: v1
+      kind: Service
