--- a/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/deployment-operator.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/deployment-operator.yaml
@@ -35,6 +35,8 @@ spec:
     spec:
       containers:
         - name: {{ .Release.Name }}
+          args:
+            - operator
           image: {{ include "dynatrace-oneagent-operator.image" . }}
           imagePullPolicy: Always
           env:
