Adjust chart to use latest manifest

--- a/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/configmap-certs.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/configmap-certs.yaml
@@ -18,6 +18,8 @@ kind: ConfigMap
 metadata:
   name: {{ .Values.oneagent.name }}
   namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "dynatrace-oneagent-operator.commonlabels" . | nindent 4 }}
 data:
   certs: |
 {{ .Values.oneagent.trustedCAs | indent 4 }}
