--- a/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/configmap.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/configmap.yaml
@@ -671,6 +671,37 @@ data:
       - name: v1alpha1
         served: true
         storage: true
+  mutatingwebhookconfiguration.yaml: |
+    apiVersion: admissionregistration.k8s.io/v1beta1
+    kind: MutatingWebhookConfiguration
+    metadata:
+      name: dynatrace-oneagent-webhook
+      labels:
+        {{- include "dynatrace-oneagent-operator.commonlabels" . | nindent 8 }}
+      ownerReferences:
+      - apiVersion: v1beta1
+        blockOwnerDeletion: true
+        kind: Application
+        name: {{ .Release.Name }}
+        uid: ##UID##
+    webhooks:
+    - name: webhook.oneagent.dynatrace.com
+      rules:
+      - apiGroups: [""]
+        apiVersions: ["v1"]
+        operations: ["CREATE"]
+        resources: ["pods"]
+        scope: Namespaced
+      namespaceSelector:
+        matchExpressions:
+        - key: oneagent.dynatrace.com/instance
+          operator: Exists
+      clientConfig:
+        service:
+          name: dynatrace-oneagent-webhook
+          namespace: {{ .Release.Namespace }}
+          path: /inject
+      admissionReviewVersions: ["v1beta1"]
   oneagent.yaml: |
     apiVersion: dynatrace.com/v1alpha1
     kind: OneAgent
@@ -738,41 +769,40 @@ data:
       {{- end }}
 
   oneagentapm.yaml: |
-      apiVersion: dynatrace.com/v1alpha1
-      kind: OneAgentAPM
-      metadata:
-        name: {{ include "oneagentapm.name" . }}
-        namespace: {{ .Release.Namespace }}
-        labels:
-              {{- include "dynatrace-oneagent-operator.commonlabels" . | nindent 8 }}
-            ownerReferences:
-            - apiVersion: v1beta1
-              blockOwnerDeletion: true
-              kind: Application
-              name: {{ .Release.Name }}
-              uid: ##UID##
-      spec:
-        apiUrl: {{ .Values.oneagent.apiUrl }}
-        tokens: {{ .Values.oneagent.name }}
+    apiVersion: dynatrace.com/v1alpha1
+    kind: OneAgentAPM
+    metadata:
+      name: {{ include "oneagentapm.name" . }}
+      namespace: {{ .Release.Namespace }}
+      labels:
+        {{- include "dynatrace-oneagent-operator.commonlabels" . | nindent 8 }}
+      ownerReferences:
+      - apiVersion: v1beta1
+        blockOwnerDeletion: true
+        kind: Application
+        name: {{ .Release.Name }}
+        uid: ##UID##
+    spec:
+      apiUrl: {{ .Values.oneagent.apiUrl }}
+      tokens: {{ .Values.oneagent.name }}
 
-        {{- if .Values.oneagent.skipCertCheck }}
-        skipCertCheck: {{ .Values.oneagent.skipCertCheck }}
-        {{- end }}
+      {{- if .Values.oneagent.skipCertCheck }}
+      skipCertCheck: {{ .Values.oneagent.skipCertCheck }}
+      {{- end }}
 
-        {{- if .Values.oneagent.enableIstio }}
-        enableIstio: {{ .Values.oneagent.enableIstio }}
-        {{- end }}
+      {{- if .Values.oneagent.enableIstio }}
+      enableIstio: {{ .Values.oneagent.enableIstio }}
+      {{- end }}
 
-        {{- if .Values.oneagent.proxy }}
-        proxy:
-          valueFrom: {{ .Values.oneagent.name }}
-        {{- end }}
+      {{- if .Values.oneagent.proxy }}
+      proxy:
+        valueFrom: {{ .Values.oneagent.name }}
+      {{- end }}
 
-        {{- if .Values.oneagent.trustedCAs }}
-        trustedCAs: {{ .Values.oneagent.name }}
-        {{- end }}
+      {{- if .Values.oneagent.trustedCAs }}
+      trustedCAs: {{ .Values.oneagent.name }}
+      {{- end }}
 
-        {{- if .Values.oneagent.networkZone }}
-        networkZone: {{ .Values.oneagent.networkZone }}
-        {{- end }}
-      {{ end }}
+      {{- if .Values.oneagent.networkZone }}
+      networkZone: {{ .Values.oneagent.networkZone }}
+      {{- end }}
