--- a/dynatrace-oneagent-operator/templates/Openshift/role-webhook.yaml
+++ b/dynatrace-oneagent-operator/templates/Openshift/role-webhook.yaml
@@ -13,6 +13,7 @@
 # limitations under the License.
 
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-oneagent-operator.platformSet" .))}}
+{{- if eq .Values.platform "openshift" }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -49,11 +50,4 @@ rules:
       - get
       - list
       - watch
-  - apiGroups:
-      - policy
-    resources:
-      - podsecuritypolicies
-    resourceNames:
-      - dynatrace-oneagent-webhook
-    verbs:
-      - use
+{{ end }}
