Replace admissionregistration.k8s.io/v1beta1 by admissionregistration.k8s.io/v1

--- a/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/configmap.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/configmap.yaml
@@ -672,7 +672,7 @@ data:
         served: true
         storage: true
   mutatingwebhookconfiguration.yaml: |
-    apiVersion: admissionregistration.k8s.io/v1beta1
+    apiVersion: admissionregistration.k8s.io/v1
     kind: MutatingWebhookConfiguration
     metadata:
       name: dynatrace-oneagent-webhook
