--- a/dynatrace-oneagent-operator/values.yaml
+++ b/dynatrace-oneagent-operator/values.yaml
@@ -14,6 +14,8 @@
 
 platform: "kubernetes"
 mode: "fullstack"
+
+# In case you don't want PSP to bee created by this chart
 createPsp: false
 
 operator:
