--- a/dynatrace-oneagent-operator/values.yaml
+++ b/dynatrace-oneagent-operator/values.yaml
@@ -15,7 +15,7 @@
 platform: "kubernetes"
 mode: "fullstack"
 
-# In case you don't want PSP to bee created by this chart
+# In case you don't want PSP to be created by this chart
 createPsp: false
 
 operator:
