API token is not needed on APM mode

--- a/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/secret.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/secret.yaml
@@ -20,7 +20,9 @@ metadata:
   labels:
     {{- include "dynatrace-oneagent-operator.commonlabels" . | nindent 4 }}
 data:
+  {{- if eq .Values.mode "fullstack" }}
   apiToken: {{ .Values.secret.apiToken | b64enc }}
+  {{- end }}
   paasToken: {{ .Values.secret.paasToken | b64enc }}
   {{- if .Values.oneagent.proxy }}
   proxy: {{ .Values.oneagent.proxy | b64enc }}
